# simple_logger

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  Example.cpp
include/: DateTime.h  Formatter.h  Logger.h
src/: DateTime.cpp  Formatter.cpp  Logger.cpp
